[tool.poetry]
name = "pg_chameleon_sample"
version = "0.1.0"
description = ""
authors = ["denzow <denzow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
psycopg2 = "^2.7"
click = "^7.0"
mysqlclient = "^1.4"
ipython = "^7.6"
peewee = "^3.9"
pgcli = "^2.1"
peewee-db-evolve = "^3.7"
requests = "^2.24.0"
isort = "^5.1.3"
pg-chameleon = "^2.0.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
